--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -10,7 +10,8 @@
     <meta name="robots" content="">
     <meta name="author" content="">
     <link rel="icon" href="">
-    <!--<link rel="stylesheet" href="../public/css">-->
+    <link rel="stylesheet" href="css/administrador.css" type="text/css">
+
 
     <!--Link das fontes utilizadas-->
     <script src="https://kit.fontawesome.com/11a0ae1d38.js" crossorigin="anonymous"></script>
@@ -19,45 +20,47 @@
 
 <body>
 
-    <main>
-        <hgroup>
-            <h1>Portfolio Dinâmico</h1>
-        </hgroup>
-    </main>
+    <% if(validacao!= "") { %>
+        <li><strong><%=validacao%></strong></li>
+        <%}%>
+
+            <main>
+                <hgroup>
+                    <h1>Portfolio Dinâmico</h1>
+                </hgroup>
+            </main>
 
 
-    <!--Este formulário abaixo serve para fazer o login-->
-    <form action="admin/login" method="post" id="form-login">
-        <label for="admin">Admin</label>
-        <input type="text" name="nomeLogin" id="admin">
+            <!--Este formulário abaixo serve para fazer o login-->
+            <form action="/admin/login" method="post" id="form-login">
+                <label for="admin">Admin</label>
+                <input type="text" name="nomeLogin" id="admin">
 
-        <label for="senha">Senha</label>
-        <input type="password" id="senha" name="senhaLogin">
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" name="senhaLogin">
 
-        <input type="submit" value="Entrar">
-    </form>
+                <input type="submit" value="Entrar">
+            </form>
 
-    <button>Inscrever</button>
-
-    <!--Este formulário abaixo serve para fazer um cadastro
+            <!--Este formulário abaixo serve para fazer um cadastro
         ele aparecerá conforme o usuario clica no botão de se inscrever
         -->
-    <form action="admin/register" method="post" id="form-register">
-        <label for="adminRegister">Admin</label>
-        <input type="text" name="adminRegister" id="adminRegister">
+            <form action="admin/register" method="post" id="form-register">
+                <label for="adminRegister">Admin</label>
+                <input type="text" name="adminRegister" id="adminRegister">
 
-        <label for="senhaRegister">Senha</label>
-        <input type="password" name="senhaRegister" id="senhaRegister">
+                <label for="senhaRegister">Senha</label>
+                <input type="password" name="senhaRegister" id="senhaRegister">
 
-        <input type="submit" value="Inscrever">
-    </form>
+                <input type="submit" value="Inscrever">
+            </form>
 
-    <div>
-        <footer>
-            <span id="copyright">&copy;</span>
-            <h2>Desenvolvido por Roberto - 2021</h2>
-        </footer>
-    </div>
+            <div>
+                <footer>
+                    <span id="copyright">&copy;</span>
+                    <h2>Desenvolvido por Roberto - 2021</h2>
+                </footer>
+            </div>
 
 </body>
 
