--- a/app/views/admin.ejs
+++ b/app/views/admin.ejs
@@ -20,7 +20,7 @@
 
 <body>
 
-    <% if(validacao!= "") { %>
+    <% if(validacao) { %>
         <li><strong><%=validacao%></strong></li>
         <%}%>
 
@@ -33,8 +33,8 @@
 
             <!--Este formulário abaixo serve para fazer o login-->
             <form action="/admin/login" method="post" id="form-login">
-                <label for="admin">Admin</label>
-                <input type="text" name="nomeLogin" id="admin">
+                <label for="admin">Nome de usuario</label>
+                <input type="text" name="nomeUsuarioLogin" id="admin">
 
                 <label for="senha">Senha</label>
                 <input type="password" id="senha" name="senhaLogin">
@@ -42,15 +42,36 @@
                 <input type="submit" value="Entrar">
             </form>
 
+            <br /><br />
+
             <!--Este formulário abaixo serve para fazer um cadastro
         ele aparecerá conforme o usuario clica no botão de se inscrever
         -->
             <form action="admin/register" method="post" id="form-register">
-                <label for="adminRegister">Admin</label>
-                <input type="text" name="adminRegister" id="adminRegister">
 
+                <label for="adminRegister">Administrador</label>
+                <input type="text" name="adminRegister" id="adminRegister">
+                <br />
                 <label for="senhaRegister">Senha</label>
                 <input type="password" name="senhaRegister" id="senhaRegister">
+                <br />
+                <label for="userName">Nome de Usuário</label>
+                <input type="text" name="nomeUsuarioRegister" id="userName">
+                <br />
+                <label for="email">E-Mail</label>
+                <input type="mail" name="email" id="email">
+                <br />
+                <label for="telephone">Telefone ou celular</label>
+                <input type="tel" name="telefone" id="telephone">
+                <br />
+                <label for="whatsapp">Whatsapp</label>
+                <input type="tel" name="whatsapp" id="whatsapp">
+                <br />
+                <p>Sobre mim:</p>
+                <textarea name="sobreMim" id="sobreMim"></textarea>
+                <br />
+                <p>Escreva abaixo os serviços prestados</p>
+                <textarea name="servicos" id="servicosPrestados"></textarea>
 
                 <input type="submit" value="Inscrever">
             </form>
