--- a/app/views/index.html
+++ b/app/views/index.html
@@ -53,24 +53,35 @@
                         </li>
                     </ul>
                 </nav>
-
-                <nav id="nav-menu-mobile">
-                    <span>Menu</span>
+            </nav>
+            <nav id="nav-menu-mobile">
+                <a href="#"><img src="../public/image/images/perfil.jpg" alt="" id="imagem-perfil"></a>
+                <a href="#"><span class="caveat nome-perfil">Roberto Designer</span></a>
+                
+                <div id="menu-hamburguer">
+                    <div id="primeira-barra"></div>
+                    <div id="segunda-barra"></div>
+                    <div id="terceira-barra"></div>
+                </div>
+                <ul id="itens-menu-mobile">
+                    <li><a href="#">Sobre mim</a></li>
+                    <li><a href="#">Contatos</a></li>
                     <ul>
-                        <li><a href="#">Sobre mim</a></li>
-                        <li><a href="#">Contatos</a></li>
-                        <ul>
-                            <li><a href="#">Whatsapp</a></li>
-                            <li><a href="#">E-mail</a></li>
-                            <li><a href="#">Telefone</a></li>
-                        </ul>
-                        <li><a href="servicos.html">Serviços</a></li>
-                        <ul>
-                            <li><a href="#">Tema claro</a></li>
-                            <li><a href="#">Tema Escuro</a></li>
-                        </ul>
+                        <li><a href="#">Whatsapp</a></li>
+                        <li><a href="#">E-mail</a></li>
+                        <li><a href="#">Telefone</a></li>
                     </ul>
-                </nav>
+                    <li><a href="servicos.html">Serviços</a></li>
+                    <ul>
+                        <li><a href="#">Tema claro</a></li>
+                        <li><a href="#">Tema Escuro</a></li>
+                    </ul>
+                    <div>
+                        <span id="copyright">&copy;</span>
+                        <h2 class="nome-perfil">Roberto Designer</h2>
+                    </div>
+                </ul>
+                
             </nav>
         </header>
         <main>
@@ -94,12 +105,7 @@
                         Projeto 2
                     </p>
                 </article>
-                <article>
-                    <img src="../public/image/images/exemplo-projeto.jpg" alt="">
-                    <p>
-                        Projeto 3
-                    </p>
-                </article>
+                
             </section>
         </main>
         <footer>
