--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -27,6 +27,27 @@ body {
     grid-template-rows: auto 78vh auto;
 }
 
+
+/*classes padrão*/
+
+.projeto-expandido {
+    position: absolute;
+    width: 25%;
+    height: 25%;
+}
+
+.projeto-expandido button {
+    color: white;
+}
+
+.d-esconder {
+    display: none;
+}
+
+.d-mostrar {
+    display: block;
+}
+
 a {
     text-decoration: none;
     font-family: "Caveat";
@@ -209,6 +230,12 @@ main h3 {
 section {
     display: flex;
     gap: 30px;
+}
+
+button {
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 article img {
